Update Habitaciones - Nuevo formato

--- a/rooms.html
+++ b/rooms.html
@@ -198,7 +198,7 @@
               </div>
               <div class="desc">
                 <h3><a href="#">Junior Suite</a></h3>
-                <p>Habitación amplia con una terraza privada con jacuzzi, en ella encontrarás la comodidad necesaria para relajarte.</p>
+                <p>Habitación amplia con cama king size, con vista interior, en ella encontrarás la comodidad necesaria para relajarte.</p>
               </div>
             </div>
           </div>
