--- a/rooms2.html
+++ b/rooms2.html
@@ -120,18 +120,18 @@
             </div>
         </div>
 
-        <div class="tm-page-wrap mx-auto">
+        <div class="tm-page-wrap mx-auto" style="margin-top: 30px;">
             <div class="tm-container-outer" id="tm-section-2">
                 <section class="tm-slideshow-section">
-                    <div class="tm-slideshow">
+                    <div class="tm-slideshow hotel-grid">
                         <img src="./assets/webp/DELUXE_2_CAMAS.webp" alt="Image">
                         <img src="./assets/webp/DELUXE_2_CAMAS_2.webp" alt="Image">
                         <img src="./assets/webp/DELUXE_2_CAMAS_3.webp" alt="Image">
                     </div>
                     <div class="tm-slideshow-description tm-bg-primary">
-                        <h2 class="">Nombre Habitación</h2>
-                        <p>Aenean in lacus nec dolor fermentum congue. Maecenas ut velit pharetra, pharetra tortor sit amet, vulputate sem. Vestibulum mi nibh, faucibus ac eros id, sagittis tincidunt velit. Proin interdum ullamcorper faucibus. Ut mi nunc, sollicitudin non pulvinar id, sagittis eget diam.</p>
-                        <a href="#" class="text-uppercase tm-btn tm-btn-white tm-btn-white-primary">Continue Reading</a>
+                        <h2 class="">Ejecutiva</h2>
+                        <p style="color:#FFF;">Las habitaciones ejecutivas están enfocadas a nuestros huéspedes de negocios.</p>
+                        <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
                     </div>
                 </section>
                 <section class="clearfix tm-slideshow-section tm-slideshow-section-reverse">
@@ -143,9 +143,9 @@
                     </div>
 
                     <div class="tm-slideshow-description tm-slideshow-description-left tm-bg-highlight">
-                        <h2 class="">Nombre Habitación</h2>
-                        <p>Vivamus in massa ullamcorper nunc auctor accumsan ac at arcu. Donec sagittis mattis pharetra. Proin commodo, ante et volutpat pulvinar, arcu arcu ullamcorper diam, id maximus sem tellus id sem. Suspendisse eget rhoncus diam. Fusce urna elit, porta nec ullamcorper id.</p>
-                        <a href="#" class="text-uppercase tm-btn tm-btn-white tm-btn-white-highlight">Continue Reading</a>
+                        <h2 class="">Deluxe Cama Queen</h2>
+                        <p style="color:#FFF;">Nuestras habitaciones Deluxe son más amplias que las habitaciones ejecutivas.</p>
+                        <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-second btn-luxe-second">Reserva aquí <i class="ti-angle-right"></i></a></p>
                     </div>
 
                 </section>
@@ -156,9 +156,9 @@
                         <img src="./assets/webp/DELUXE_2_CAMAS_3.webp" alt="Image">
                     </div>
                     <div class="tm-slideshow-description tm-bg-primary">
-                        <h2 class="">Nombre Habitación</h2>
-                        <p>Donec nec laoreet diam, at vehicula ante. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse nec dapibus nunc, quis viverra metus. Morbi eget diam gravida, euismod magna vel, tempor urna.</p>
-                        <a href="#" class="text-uppercase tm-btn tm-btn-white tm-btn-white-primary">Continue Reading</a>
+                        <h2 class="">Deluxe Dos Camas</h2>
+                        <p style="color:#FFF;">Habitaciones más amplias, cuentan con dos camas matrimoniales para hospedar cómodamente a 4 personas.</p>
+                        <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
                     </div>
                 </section>
                 <section class="clearfix tm-slideshow-section tm-slideshow-section-reverse">
@@ -170,9 +170,9 @@
                     </div>
 
                     <div class="tm-slideshow-description tm-slideshow-description-left tm-bg-highlight">
-                        <h2 class="">Nombre Habitación</h2>
-                        <p>Vivamus in massa ullamcorper nunc auctor accumsan ac at arcu. Donec sagittis mattis pharetra. Proin commodo, ante et volutpat pulvinar, arcu arcu ullamcorper diam, id maximus sem tellus id sem. Suspendisse eget rhoncus diam. Fusce urna elit, porta nec ullamcorper id.</p>
-                        <a href="#" class="text-uppercase tm-btn tm-btn-white tm-btn-white-highlight">Continue Reading</a>
+                        <h2 class="">Máster Suite</h2>
+                        <p style="color:#FFF;">Habitación amplia con una terraza privada con jacuzzi, en ella encontrarás la comodidad necesaria para relajarte.</p>
+                        <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-second btn-luxe-second">Reserva aquí <i class="ti-angle-right"></i></a></p>
                     </div>
 
                 </section>
@@ -183,9 +183,36 @@
                         <img src="./assets/webp/DELUXE_2_CAMAS_3.webp" alt="Image">
                     </div>
                     <div class="tm-slideshow-description tm-bg-primary">
-                        <h2 class="">Nombre Habitación</h2>
-                        <p>Donec nec laoreet diam, at vehicula ante. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse nec dapibus nunc, quis viverra metus. Morbi eget diam gravida, euismod magna vel, tempor urna.</p>
-                        <a href="#" class="text-uppercase tm-btn tm-btn-white tm-btn-white-primary">Continue Reading</a>
+                        <h2 class="">Suite Tina Antigua</h2>
+                        <p style="color:#FFF;">En esta habitación podrás encontrar amplitud, comodidad y te enamorarás de su tina antigua que da un estilo vintage. Vista exterior a la calle principal del hotel.</p>
+                        <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
+                    </div>
+                </section>
+                <section class="clearfix tm-slideshow-section tm-slideshow-section-reverse">
+
+                    <div class="tm-right tm-slideshow tm-slideshow-highlight">
+                        <img src="./assets/webp/DELUXE_2_CAMAS.webp" alt="Image">
+                        <img src="./assets/webp/DELUXE_2_CAMAS_2.webp" alt="Image">
+                        <img src="./assets/webp/DELUXE_2_CAMAS_3.webp" alt="Image">
+                    </div>
+
+                    <div class="tm-slideshow-description tm-slideshow-description-left tm-bg-highlight">
+                        <h2 class="">Suite Jacuzzi</h2>
+                        <p style="color:#FFF;">Habitación amplia, diseñada para que puedas relajarte tanto en su amplia cama como en su jacuzzi de hidromasaje, Vista exterior a la calle principal del hotel.</p>
+                        <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-second btn-luxe-second">Reserva aquí <i class="ti-angle-right"></i></a></p>
+                    </div>
+
+                </section>
+                <section class="tm-slideshow-section">
+                    <div class="tm-slideshow">
+                        <img src="./assets/webp/DELUXE_2_CAMAS.webp" alt="Image">
+                        <img src="./assets/webp/DELUXE_2_CAMAS_2.webp" alt="Image">
+                        <img src="./assets/webp/DELUXE_2_CAMAS_3.webp" alt="Image">
+                    </div>
+                    <div class="tm-slideshow-description tm-bg-primary">
+                        <h2 class="">Junior Suite</h2>
+                        <p style="color:#FFF;">Habitación amplia con cama king size, con vista interior, en ella encontraras la comodidad necesaria para relajarte.</p>
+                        <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
                     </div>
                 </section>
             </div>
