Anclas y dev Rooms2

--- a/rooms.html
+++ b/rooms.html
@@ -185,7 +185,8 @@
               </div>
               <div class="desc">
                 <h3><a href="#">Suite Jacuzzi</a></h3>
-                <p>Habitación amplia, diseñada para que puedas relajarte tanto en su amplia cama como en su jacuzzi de hidromasaje, Vista exterior a la calle principal del hotel.</p>
+                <p>Habitación amplia, diseñada para que puedas relajarte tanto en su amplia cama como en su jacuzzi de hidromasaje, Vista exterior a la calle principal del hotel.
+                  </p>
               </div>
             </div>
           </div>
