--- a/rooms2.html
+++ b/rooms2.html
@@ -120,13 +120,13 @@
             </div>
         </div>
 
-        <div class="tm-page-wrap mx-auto" style="margin-top: 30px;">
+        <div class="tm-page-wrap mx-auto" style="margin-top: 30px;" id="ejecutivaAncla">
             <div class="tm-container-outer" id="tm-section-2">
                 <section class="tm-slideshow-section">
                     <div class="tm-slideshow hotel-grid">
-                        <img src="./assets/webp/DELUXE_2_CAMAS.webp" alt="Image">
-                        <img src="./assets/webp/DELUXE_2_CAMAS_2.webp" alt="Image">
-                        <img src="./assets/webp/DELUXE_2_CAMAS_3.webp" alt="Image">
+                        <img src="./assets/webp/EJECUTIVA.webp" alt="Image">
+                        <img src="./assets/webp/EJECUTIVA_1.webp" alt="Image">
+                        <img src="./assets/webp/EJECUTIVA.webp" alt="Image">
                     </div>
                     <div class="tm-slideshow-description tm-bg-primary">
                         <h2 class="">Ejecutiva</h2>
@@ -134,7 +134,7 @@
                         <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
                     </div>
                 </section>
-                <section class="clearfix tm-slideshow-section tm-slideshow-section-reverse">
+                <section class="clearfix tm-slideshow-section tm-slideshow-section-reverse" id="anclaDCQ">
 
                     <div class="tm-right tm-slideshow tm-slideshow-highlight">
                         <img src="./assets/webp/DELUXE_2_CAMAS.webp" alt="Image">
@@ -149,11 +149,11 @@
                     </div>
 
                 </section>
-                <section class="tm-slideshow-section">
+                <section class="tm-slideshow-section" id="anclaDDC">
                     <div class="tm-slideshow">
                         <img src="./assets/webp/DELUXE_2_CAMAS.webp" alt="Image">
                         <img src="./assets/webp/DELUXE_2_CAMAS_2.webp" alt="Image">
-                        <img src="./assets/webp/DELUXE_2_CAMAS_3.webp" alt="Image">
+                        <img src="./assets/webp/DELUXE_2_CAMAS_5.webp" alt="Image">
                     </div>
                     <div class="tm-slideshow-description tm-bg-primary">
                         <h2 class="">Deluxe Dos Camas</h2>
@@ -161,12 +161,12 @@
                         <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
                     </div>
                 </section>
-                <section class="clearfix tm-slideshow-section tm-slideshow-section-reverse">
+                <section class="clearfix tm-slideshow-section tm-slideshow-section-reverse" id="anclaMS">
 
                     <div class="tm-right tm-slideshow tm-slideshow-highlight">
-                        <img src="./assets/webp/DELUXE_2_CAMAS.webp" alt="Image">
-                        <img src="./assets/webp/DELUXE_2_CAMAS_2.webp" alt="Image">
-                        <img src="./assets/webp/DELUXE_2_CAMAS_3.webp" alt="Image">
+                        <img src="./assets/webp/MASTER_SUITE.webp" alt="Image">
+                        <img src="./assets/webp/MASTER_SUITE_3.webp" alt="Image">
+                        <img src="./assets/webp/MASTER_SUITE_4.webp" alt="Image">
                     </div>
 
                     <div class="tm-slideshow-description tm-slideshow-description-left tm-bg-highlight">
@@ -176,7 +176,7 @@
                     </div>
 
                 </section>
-                <section class="tm-slideshow-section">
+                <section class="tm-slideshow-section" id="anclaSTA">
                     <div class="tm-slideshow">
                         <img src="./assets/webp/DELUXE_2_CAMAS.webp" alt="Image">
                         <img src="./assets/webp/DELUXE_2_CAMAS_2.webp" alt="Image">
@@ -188,12 +188,12 @@
                         <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
                     </div>
                 </section>
-                <section class="clearfix tm-slideshow-section tm-slideshow-section-reverse">
+                <section class="clearfix tm-slideshow-section tm-slideshow-section-reverse" id="anclaSJ">
 
                     <div class="tm-right tm-slideshow tm-slideshow-highlight">
-                        <img src="./assets/webp/DELUXE_2_CAMAS.webp" alt="Image">
-                        <img src="./assets/webp/DELUXE_2_CAMAS_2.webp" alt="Image">
-                        <img src="./assets/webp/DELUXE_2_CAMAS_3.webp" alt="Image">
+                        <img src="./assets/webp/SUITE_CON_JACUZZI.webp" alt="Image">
+                        <img src="./assets/webp/JACUZZI_1.webp" alt="Image">
+                        <img src="./assets/webp/JACUZZI_2.webp" alt="Image">
                     </div>
 
                     <div class="tm-slideshow-description tm-slideshow-description-left tm-bg-highlight">
@@ -203,7 +203,7 @@
                     </div>
 
                 </section>
-                <section class="tm-slideshow-section">
+                <section class="tm-slideshow-section" id="anclaJS">
                     <div class="tm-slideshow">
                         <img src="./assets/webp/DELUXE_2_CAMAS.webp" alt="Image">
                         <img src="./assets/webp/DELUXE_2_CAMAS_2.webp" alt="Image">
