--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 					</div>
 					<div class="desc">
 						<h3>Ejecutiva</h3>
-						<p>Las habitaciones ejecutivas están enfocadas a nuestros huéspedes de negocios. <small><a href="rooms2.html#ejecutivaAncla">Ver más...</a></small></p>
+						<p>Las habitaciones ejecutivas están enfocadas a nuestros huéspedes de negocios. <small><a href="rooms.html#ejecutivaAncla">Ver más...</a></small></p>
 						<p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí<i class="ti-angle-right"></i></a></p>
 					</div>
 				</div>
@@ -250,7 +250,7 @@
 						</div>
 						<div class="desc">
 							<h3>Deluxe Cama Queen</h3>
-							<p>Nuestras habitaciones Deluxe son más amplias que las habitaciones ejecutivas. <small><a href="rooms2.html#anclaDCQ">Ver más...</a></small></p>
+							<p>Nuestras habitaciones Deluxe son más amplias que las habitaciones ejecutivas. <small><a href="rooms.html#anclaDCQ">Ver más...</a></small></p>
 							<p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
 						</div>
 					</div>
@@ -263,7 +263,7 @@
 						</div>
 						<div class="desc">
 							<h3>Deluxe Dos Camas</h3>
-							<p>Habitaciones más amplias, cuentan con dos camas matrimoniales para hospedar cómodamente a 4 personas. <small><a href="rooms2.html#anclaDDC">Ver más...</a></small></p>
+							<p>Habitaciones más amplias, cuentan con dos camas matrimoniales para hospedar cómodamente a 4 personas. <small><a href="rooms.html#anclaDDC">Ver más...</a></small></p>
 							<p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
 						</div>
 					</div>
@@ -277,7 +277,7 @@
 					</div>
 					<div class="desc">
 						<h3>Master Suite</h3>
-						<p>Habitación amplia con una terraza privada con jacuzzi, en ella encontrarás la comodidad necesaria para relajarte. <small><a href="rooms2.html#anclaMS">Ver más...</a></small></p>
+						<p>Habitación amplia con una terraza privada con jacuzzi, en ella encontrarás la comodidad necesaria para relajarte. <small><a href="rooms.html#anclaMS">Ver más...</a></small></p>
 						<p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
 					</div>
 				</div>
@@ -291,7 +291,7 @@
 						</div>
 						<div class="desc">
 							<h3>Suite Tina Antigua</h3>
-							<p>En esta habitación podrás encontrar amplitud, comodidad y te enamorarás de su tina antigua que da un estilo vintage. Vista exterior a la calle principal del hotel. <small><a href="rooms2.html#anclaSTA">Ver más...</a></small></p>
+							<p>En esta habitación podrás encontrar amplitud, comodidad y te enamorarás de su tina antigua que da un estilo vintage. Vista exterior a la calle principal del hotel. <small><a href="rooms.html#anclaSTA">Ver más...</a></small></p>
 							<p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
 						</div>
 					</div>
@@ -303,7 +303,7 @@
 						</div>
 						<div class="desc">
 							<h3>Suite Jacuzzi</h3>
-							<p>Habitación amplia, diseñada para que puedas relajarte tanto en su amplia cama como en su jacuzzi de hidromasaje, Vista exterior a la calle principal del hotel. <small><a href="rooms2.html#anclaSJ">Ver más...</a></small></p>
+							<p>Habitación amplia, diseñada para que puedas relajarte tanto en su amplia cama como en su jacuzzi de hidromasaje, Vista exterior a la calle principal del hotel. <small><a href="rooms.html#anclaSJ">Ver más...</a></small></p>
 							<p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
 						</div>
 					</div>
@@ -316,7 +316,7 @@
 					</div>
 					<div class="desc">
 						<h3>Junior Suite</h3>
-						<p>Habitación amplia con cama king size, con vista interior, en ella encontrarás la comodidad necesaria para relajarte. <small><a href="rooms2.html#anclaJS">Ver más...</a></small></p>
+						<p>Habitación amplia con cama king size, con vista interior, en ella encontrarás la comodidad necesaria para relajarte. <small><a href="rooms.html#anclaJS">Ver más...</a></small></p>
 						<p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
 					</div>
 				</div>
