Adding margin top bottom to rooms

--- a/rooms.html
+++ b/rooms.html
@@ -224,7 +224,7 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="copyright">
-                            <p><small>&copy; Hotel Punto MX<br> Todos los derechos reservados. </small> <br>
+                            <p style="color: var(--grey-sv);"><small>&copy; Hotel Punto MX<br> Todos los derechos reservados. </small> <br>
                             </p>
                         </div>
                     </div>
