--- a/cdmx.html
+++ b/cdmx.html
@@ -103,7 +103,6 @@
             </header>
 
         </div>
-        <!-- end:fh5co-header -->
         <div class="fh5co-parallax" style="background-image: url(images/slider1.jpg);" data-stellar-background-ratio="0.5">
             <div class="overlay"></div>
             <div class="container">
@@ -117,11 +116,7 @@
                 </div>
             </div>
         </div>
-
-        <div id="fh5co-hotel-section">
-        </div>
-
-
+        <div id="fh5co-hotel-section"></div>
         <footer id="footer" class="fh5co-bg-color">
             <div class="container">
                 <div class="row">
@@ -178,10 +173,7 @@
                 </div>
             </div>
         </footer>
-
     </div>
-    <!-- END fh5co-page -->
-
 </div>
 
 <!-- Javascripts -->
