--- a/rooms.html
+++ b/rooms.html
@@ -211,7 +211,7 @@
                     </div>
                     <div class="tm-slideshow-description tm-bg-primary">
                         <h2 class="">Junior Suite</h2>
-                        <p style="color:#FFF;">Habitación amplia con cama king size, con vista interior, en ella encontraras la comodidad necesaria para relajarte.</p>
+                        <p style="color:#FFF;">Habitación amplia con cama king size, con vista interior, en ella encontrarás la comodidad necesaria para relajarte.</p>
                         <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
                     </div>
                 </section>
