--- a/propCdmx.html
+++ b/propCdmx.html
@@ -87,7 +87,7 @@ https://templatemo.com/tm-526-vanilla
                     <div class="col-md-12 col-md-offset-0 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
                         <div class="fh5co-intro fh5co-table-cell">
                             <h1 class="text-center">Conoce la CDMX</h1>
-                            <!--<p>Contenido adaptable -  Por definir</p>-->
+                            <p>En Punto MX pensamos en TODO para que nuestros huéspedes creen memorias INOLVIDABLES de la CDMX.</p>
                         </div>
                     </div>
                 </div>
@@ -95,32 +95,30 @@ https://templatemo.com/tm-526-vanilla
         </div>
         <div class="fixed-side-navbar">
     <ul class="nav flex-column">
-        <li class="nav-item"><a class="nav-link" href="#services"><span>Bellas Astes</span></a></li>
+        <li class="nav-item"><a class="nav-link" href="#services"><span>¿Qué empacar?</span></a></li>
         <li class="nav-item"><a class="nav-link" href="#home"><span>Torre Latino</span></a></li>
-        <li class="nav-item"><a class="nav-link" href="#portfolio"><span>Portfolio</span></a></li>
-        <li class="nav-item"><a class="nav-link" href="#our-story"><span>Our Story</span></a></li>
-        <li class="nav-item"><a class="nav-link" href="#contact-us"><span>Contact Us</span></a></li>
-        <li class="nav-item"><a class="nav-link" href="#contact-us"><span>Contact Us</span></a></li>
-        <li class="nav-item"><a class="nav-link" href="#contact-us"><span>Contact Us</span></a></li>
+        <li class="nav-item"><a class="nav-link" href="#portfolio"><span>Bellas Artes</span></a></li>
+        <li class="nav-item"><a class="nav-link" href="#our-story"><span>Palacio Postal</span></a></li>
+        <li class="nav-item"><a class="nav-link" href="#t-mayor"><span>Templo Mayor</span></a></li>
+        <li class="nav-item"><a class="nav-link" href="#c-madero"><span>C. Madero</span></a></li>
+        <li class="nav-item"><a class="nav-link" href="#chapultepec"><span>Chapultepec</span></a></li>
     </ul>
 </div>
         <div class="service-content" id="services">
             <div class="container">
                 <div class="row">
+                    <div class="col-md-12 col-md-offset-0 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table" style="height: 100px;">
+                        <div class="text-white">
+                            <h1 class="text-center text-white mb-2" style="font-family: 'Courgette', cursive, sans-serif;">¿Qué empacar?</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-md-4">
                         <div class="left-text">
-                            <h4>Widget Clima</h4>
+                            <h4>Clima en la CDMX</h4>
                             <div class="line-dec"></div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto autem consequatur dicta eligendi facilis iusto maiores minus neque nihil officia pariatur, provident, quaerat quo, reprehenderit repudiandae sed totam ut veritatis.</p>
-                            <!--<ul>
-                                <li>-  Praesent porta urna id eros</li>
-                                <li>-  Curabitur consectetur malesuada</li>
-                                <li>-  Nam pretium imperdiet enim</li>
-                                <li>-  Sed viverra arcu non nisi efficitur</li>
-                            </ul>-->
-                            <!--<div class="primary-button">
-                                <a href="#portfolio">Learn More About Us</a>
-                            </div>-->
+                            <p>Aquí encontrarás un resumen del clima actualizado en nuestra amada ciudad, con el fin de que tengas una idea de las condiciones climatológicas durante tu estancia ¡y que no te tome desprevenido!</p>
                         </div>
                     </div>
                     <div class="col-md-8">
@@ -333,6 +331,162 @@ https://templatemo.com/tm-526-vanilla
         </div>
     </div>
 </div>
+        <div class="service-content" id="t-mayor">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 col-md-offset-0 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table" style="height: 100px;">
+                        <div class="text-white">
+                            <h1 class="text-center text-white mb-2" style="font-family: 'Courgette', cursive, sans-serif;">¿Qué empacar?</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="left-text">
+                            <h4>Clima en la CDMX</h4>
+                            <div class="line-dec"></div>
+                            <p>Aquí encontrarás un resumen del clima actualizado en nuestra amada ciudad, con el fin de que tengas una idea de las condiciones climatológicas durante tu estancia ¡y que no te tome desprevenido!</p>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="service-item">
+                                    <h4>PRIMAVERA<br><small >Marzo, Abril y Mayo</small></h4>
+                                    <div class="line-dec"></div>
+                                    <p>Suele ser la estación más cálida y seca con temperaturas que alcanzan hasta los 30°C por la tarde.</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="service-item">
+                                    <h4>VERANO<br><small>Junio, Julio, Agosto y Septiembre</small></h4>
+                                    <div class="line-dec"></div>
+                                    <p>Esta es la estación mejor conocida por ser la TEMPORADA DE LLUVIA. Se  caracteriza por tener temperaturas de moderadas a cálidas durante la mañana con cielos despejados que se transforman en cielos nublados con lluvias casi todos los días por las tardes.</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="service-item">
+                                    <h4>OTOÑO<br><small>Octubre y Noviembre</small></h4>
+                                    <div class="line-dec"></div>
+                                    <p>Esta es una de las estaciones más agradables del año en la ciudad, ya que se caracteriza por tener temperaturas suaves de hasta 20° C con cielos despejados prácticamente sin nubes y brisa ligera y fresca. En los amaneceres y los atardeceres suele descender la temperatura hasta 10° C.</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="service-item">
+                                    <h4>INVIERNO<br><small> Diciembre, Enero y Febrero</small></h4>
+                                    <div class="line-dec"></div>
+                                    <p>Esta estación también suele ser muy agradable al presentar vientos suaves y cielos despejados, la única diferencia con respecto al otoño consiste en que algunos días se presentan frentes fríos del norte que hacen descender las temperaturas a sus mínimos anuales de hasta -3°C por las noches aunque durante la mañana la temperatura suele subir hasta 15°C o 20°C. Ocasionalmente durante esta estación se llegan a presentar nevadas en las partes altas de las serranías que rodean la ciudad.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="service-content" id="c-madero">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 col-md-offset-0 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table" style="height: 100px;">
+                        <div class="text-white">
+                            <h1 class="text-center text-white mb-2" style="font-family: 'Courgette', cursive, sans-serif;">¿Qué empacar?</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="left-text">
+                            <h4>Clima en la CDMX</h4>
+                            <div class="line-dec"></div>
+                            <p>Aquí encontrarás un resumen del clima actualizado en nuestra amada ciudad, con el fin de que tengas una idea de las condiciones climatológicas durante tu estancia ¡y que no te tome desprevenido!</p>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="service-item">
+                                    <h4>PRIMAVERA<br><small >Marzo, Abril y Mayo</small></h4>
+                                    <div class="line-dec"></div>
+                                    <p>Suele ser la estación más cálida y seca con temperaturas que alcanzan hasta los 30°C por la tarde.</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="service-item">
+                                    <h4>VERANO<br><small>Junio, Julio, Agosto y Septiembre</small></h4>
+                                    <div class="line-dec"></div>
+                                    <p>Esta es la estación mejor conocida por ser la TEMPORADA DE LLUVIA. Se  caracteriza por tener temperaturas de moderadas a cálidas durante la mañana con cielos despejados que se transforman en cielos nublados con lluvias casi todos los días por las tardes.</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="service-item">
+                                    <h4>OTOÑO<br><small>Octubre y Noviembre</small></h4>
+                                    <div class="line-dec"></div>
+                                    <p>Esta es una de las estaciones más agradables del año en la ciudad, ya que se caracteriza por tener temperaturas suaves de hasta 20° C con cielos despejados prácticamente sin nubes y brisa ligera y fresca. En los amaneceres y los atardeceres suele descender la temperatura hasta 10° C.</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="service-item">
+                                    <h4>INVIERNO<br><small> Diciembre, Enero y Febrero</small></h4>
+                                    <div class="line-dec"></div>
+                                    <p>Esta estación también suele ser muy agradable al presentar vientos suaves y cielos despejados, la única diferencia con respecto al otoño consiste en que algunos días se presentan frentes fríos del norte que hacen descender las temperaturas a sus mínimos anuales de hasta -3°C por las noches aunque durante la mañana la temperatura suele subir hasta 15°C o 20°C. Ocasionalmente durante esta estación se llegan a presentar nevadas en las partes altas de las serranías que rodean la ciudad.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="service-content" id="chapultepec">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 col-md-offset-0 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table" style="height: 100px;">
+                        <div class="text-white">
+                            <h1 class="text-center text-white mb-2" style="font-family: 'Courgette', cursive, sans-serif;">¿Qué empacar?</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="left-text">
+                            <h4>Clima en la CDMX</h4>
+                            <div class="line-dec"></div>
+                            <p>Aquí encontrarás un resumen del clima actualizado en nuestra amada ciudad, con el fin de que tengas una idea de las condiciones climatológicas durante tu estancia ¡y que no te tome desprevenido!</p>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="service-item">
+                                    <h4>PRIMAVERA<br><small >Marzo, Abril y Mayo</small></h4>
+                                    <div class="line-dec"></div>
+                                    <p>Suele ser la estación más cálida y seca con temperaturas que alcanzan hasta los 30°C por la tarde.</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="service-item">
+                                    <h4>VERANO<br><small>Junio, Julio, Agosto y Septiembre</small></h4>
+                                    <div class="line-dec"></div>
+                                    <p>Esta es la estación mejor conocida por ser la TEMPORADA DE LLUVIA. Se  caracteriza por tener temperaturas de moderadas a cálidas durante la mañana con cielos despejados que se transforman en cielos nublados con lluvias casi todos los días por las tardes.</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="service-item">
+                                    <h4>OTOÑO<br><small>Octubre y Noviembre</small></h4>
+                                    <div class="line-dec"></div>
+                                    <p>Esta es una de las estaciones más agradables del año en la ciudad, ya que se caracteriza por tener temperaturas suaves de hasta 20° C con cielos despejados prácticamente sin nubes y brisa ligera y fresca. En los amaneceres y los atardeceres suele descender la temperatura hasta 10° C.</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="service-item">
+                                    <h4>INVIERNO<br><small> Diciembre, Enero y Febrero</small></h4>
+                                    <div class="line-dec"></div>
+                                    <p>Esta estación también suele ser muy agradable al presentar vientos suaves y cielos despejados, la única diferencia con respecto al otoño consiste en que algunos días se presentan frentes fríos del norte que hacen descender las temperaturas a sus mínimos anuales de hasta -3°C por las noches aunque durante la mañana la temperatura suele subir hasta 15°C o 20°C. Ocasionalmente durante esta estación se llegan a presentar nevadas en las partes altas de las serranías que rodean la ciudad.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <footer id="footer" class="fh5co-bg-color">
             <div class="container">
