Prop CDMX_Paralax

--- a/propCdmx.html
+++ b/propCdmx.html
@@ -104,7 +104,9 @@ https://templatemo.com/tm-526-vanilla
         <li class="nav-item"><a class="nav-link" href="#chapultepec"><span>Chapultepec</span></a></li>
     </ul>
 </div>
-        <div class="service-content" id="services" style="background: linear-gradient( rgb(4,122,122,0.6) 100%, rgba(0, 0, 0, 0.2)100%),url(./assets/pexels/angel_i.jpg); background-size: contain, cover; background-position: center center,center center!important; background-repeat: repeat,no-repeat;">
+        <!--<div class="service-content" id="services" style="background: linear-gradient( rgb(4,122,122,0.6) 100%, rgba(0, 0, 0, 0.2)100%),url(./assets/pexels/angel_i.jpg); background-size: contain, cover; background-position: center center,center center!important; background-repeat: repeat,no-repeat;">-->
+        <div class="service-content" id="services">
+            <div class="overlay" style="background: linear-gradient( rgb(4,122,122,0.6) 100%, rgba(0, 0, 0, 0.2)100%); background-size: contain; background-position: center center; background-repeat: repeat;" ></div>
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 col-md-offset-0 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table" style="height: 100px;">
