Torre Latino added

--- a/propCdmx.html
+++ b/propCdmx.html
@@ -106,7 +106,7 @@ https://templatemo.com/tm-526-vanilla
 </div>
         <!--<div class="service-content" id="services" style="background: linear-gradient( rgb(4,122,122,0.6) 100%, rgba(0, 0, 0, 0.2)100%),url(./assets/pexels/angel_i.jpg); background-size: contain, cover; background-position: center center,center center!important; background-repeat: repeat,no-repeat;">-->
         <div class="service-content" id="services">
-            <div class="overlay" style="background: linear-gradient( rgb(4,122,122,0.6) 100%, rgba(0, 0, 0, 0.2)100%); background-size: contain; background-position: center center; background-repeat: repeat;" ></div>
+            <div class="myselfoverlay"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 col-md-offset-0 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table" style="height: 100px;">
@@ -159,16 +159,24 @@ https://templatemo.com/tm-526-vanilla
             </div>
         </div>
         <div class="parallax-content baner-content" id="home">
-    <div class="container">
-        <div class="first-content">
-            <h1>Vanilla</h1>
-            <span><em>Bootstrap</em> v4.2.1 Theme</span>
-            <div class="primary-button">
-                <a href="#services">Discover More</a>
+            <div class="overlayTorre"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                    <h1 class="titlePlace text-white"><span class="cursiveFont">Torre</span>Latino</h1>
+                        <p class="text-white font-weight-bold mb-0">Este Rascacielos cuenta con:</p>
+                        <ul class="text-white font-weight-bold">
+                            <li>44 pisos</li>
+                            <li>181.33 metros de altura</li>
+                            <li>a 9 minutos caminando</li>
+                        </ul>
+                    <div class="primary-button">
+                        <a href="#services" class="">Discover More</a>
+                    </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
         <div class="parallax-content projects-content" id="portfolio">
     <div class="container">
         <div class="row">
