Bellas artes added

--- a/propCdmx.html
+++ b/propCdmx.html
@@ -28,6 +28,9 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
     <!-------------------------------------------->
+    <!-----------------------FONT AWESOME--------------------->
+    <script src="https://kit.fontawesome.com/f40904d23d.js" crossorigin="anonymous"></script>
+    <!-------------------------------------------->
     <!-------------------------------------------->
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/superfish.css">
@@ -97,7 +100,7 @@ https://templatemo.com/tm-526-vanilla
     <ul class="nav flex-column">
         <li class="nav-item"><a class="nav-link" href="#services"><span>¿Qué empacar?</span></a></li>
         <li class="nav-item"><a class="nav-link" href="#home"><span>Torre Latino</span></a></li>
-        <li class="nav-item"><a class="nav-link" href="#portfolio"><span>Bellas Artes</span></a></li>
+        <li class="nav-item"><a class="nav-link" href="#bellas_artes"><span>Bellas Artes</span></a></li>
         <li class="nav-item"><a class="nav-link" href="#our-story"><span>Palacio Postal</span></a></li>
         <li class="nav-item"><a class="nav-link" href="#t-mayor"><span>Templo Mayor</span></a></li>
         <li class="nav-item"><a class="nav-link" href="#c-madero"><span>C. Madero</span></a></li>
@@ -105,6 +108,7 @@ https://templatemo.com/tm-526-vanilla
     </ul>
 </div>
         <!--<div class="service-content" id="services" style="background: linear-gradient( rgb(4,122,122,0.6) 100%, rgba(0, 0, 0, 0.2)100%),url(./assets/pexels/angel_i.jpg); background-size: contain, cover; background-position: center center,center center!important; background-repeat: repeat,no-repeat;">-->
+        <!--*******¿Qué empacar?******-->
         <div class="service-content" id="services">
             <div class="myselfoverlay"></div>
             <div class="container">
@@ -158,6 +162,8 @@ https://templatemo.com/tm-526-vanilla
                 </div>
             </div>
         </div>
+        <!--*************-->
+        <!--******Torre Latino*******-->
         <div class="parallax-content baner-content" id="home">
             <div class="overlayTorre"></div>
             <div class="container">
@@ -170,95 +176,33 @@ https://templatemo.com/tm-526-vanilla
                             <li>181.33 metros de altura</li>
                             <li>a 9 minutos caminando</li>
                         </ul>
-                    <div class="primary-button">
-                        <a href="#services" class="">Discover More</a>
-                    </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="parallax-content projects-content" id="portfolio">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div id="owl-testimonials" class="owl-carousel owl-theme">
-                    <div class="item">
-                        <div class="testimonials-item">
-                            <a href="img/1st-big-item.jpg" data-lightbox="image-1"><img src="img/1st-item.jpg" alt=""></a>
-                            <div class="text-content">
-                                <h4>Awesome Note Book</h4>
-                                <span>$18.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="testimonials-item">
-                            <a href="img/2nd-big-item.jpg" data-lightbox="image-1"><img src="img/2nd-item.jpg" alt=""></a>
-                            <div class="text-content">
-                                <h4>Antique Decoration Photo</h4>
-                                <span>$27.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="testimonials-item">
-                            <a href="img/3rd-big-item.jpg" data-lightbox="image-1"><img src="img/3rd-item.jpg" alt=""></a>
-                            <div class="text-content">
-                                <h4>Work Hand Bag</h4>
-                                <span>$36.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="testimonials-item">
-                            <a href="img/4th-big-item.jpg" data-lightbox="image-1"><img src="img/4th-item.jpg" alt=""></a>
-                            <div class="text-content">
-                                <h4>Smart Watch</h4>
-                                <span>$45.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="testimonials-item">
-                            <a href="img/5th-big-item.jpg" data-lightbox="image-1"><img src="img/5th-item.jpg" alt=""></a>
-                            <div class="text-content">
-                                <h4>PC Tablet Draw</h4>
-                                <span>$63.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="testimonials-item">
-                            <a href="img/6th-big-item.jpg" data-lightbox="image-1"><img src="img/6th-item.jpg" alt=""></a>
-                            <div class="text-content">
-                                <h4>Healthy Milkshake</h4>
-                                <span>$77.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="testimonials-item">
-                            <a href="img/2nd-big-item.jpg" data-lightbox="image-1"><img src="img/2nd-item.jpg" alt=""></a>
-                            <div class="text-content">
-                                <h4>Antique Decoration Photo</h4>
-                                <span>$84.50</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="testimonials-item">
-                            <a href="img/1st-big-item.jpg" data-lightbox="image-1"><img src="img/1st-item.jpg" alt=""></a>
-                            <div class="text-content">
-                                <h4>Awesome Notes Book</h4>
-                                <span>$96.75</span>
-                            </div>
+                        <div class="btn-waze">
+                            <a href="#" class="btn-waze text-white"><i class="fab fa-waze"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</div>
+        <!--*************-->
+        <div class="parallax-content element-content__bellasartes" id="bellas_artes">
+            <div class="mmOverlay"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h1 class="titlePlace text-white"><span class="cursiveFont">Palacio de</span>Bellas Artes</h1>
+                        <p class="text-white font-weight-bold mb-0">Recinto Cultural</p>
+                        <ul class="text-white font-weight-bold">
+                            <li>Considerado el más importante en la manifestación de las artes en México</li>
+                            <li>Y una de las casas de ópera más renombradas del mundo.</li>
+                            <li>a 9 minutos caminando</li>
+                        </ul>
+                        <div class="btn-waze">
+                            <a href="#" class="btn-waze text-white"><i class="fab fa-waze"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="tabs-content" id="our-story">
     <div class="container">
         <div class="row">
