--- a/propCdmx.html
+++ b/propCdmx.html
@@ -229,12 +229,12 @@ https://templatemo.com/tm-526-vanilla
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h1 class="titlePlace text-white"><span class="cursiveFont">Palacio</span>Postal</h1>
-                        <p class="text-white font-weight-bold mb-0">Obra arquitectónica</p>
+                        <h1 class="titlePlace text-white"><span class="cursiveFont">Templo</span>Mayor</h1>
+                        <p class="text-white font-weight-bold mb-0">Lorem ipsum dolor.</p>
                         <ul class="text-white font-weight-bold">
-                            <li>Construida a comienzos del siglo XX</li>
-                            <li>Uno de los símbolos del Porfiriato</li>
-                            <li>a 12 minutos caminando</li>
+                            <li>Lorem ipsum dolor sit amet, consectetur.</li>
+                            <li>Lorem ipsum dolor sit.</li>
+                            <li>a 00 minutos caminando</li>
                         </ul>
                         <div class="btn-waze">
                             <a href="#" class="btn-waze text-white"><i class="fab fa-waze"></i></a>
@@ -249,12 +249,12 @@ https://templatemo.com/tm-526-vanilla
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h1 class="titlePlace text-white"><span class="cursiveFont">Palacio</span>Postal</h1>
-                        <p class="text-white font-weight-bold mb-0">Obra arquitectónica</p>
+                        <h1 class="titlePlace text-white"><span class="cursiveFont">Calle</span>Madero</h1>
+                        <p class="text-white font-weight-bold mb-0">Lorem ipsum dolor.</p>
                         <ul class="text-white font-weight-bold">
-                            <li>Construida a comienzos del siglo XX</li>
-                            <li>Uno de los símbolos del Porfiriato</li>
-                            <li>a 12 minutos caminando</li>
+                            <li>Lorem ipsum dolor sit amet, consectetur.</li>
+                            <li>Lorem ipsum dolor sit.</li>
+                            <li>a 00 minutos caminando</li>
                         </ul>
                         <div class="btn-waze">
                             <a href="#" class="btn-waze text-white"><i class="fab fa-waze"></i></a>
@@ -269,12 +269,12 @@ https://templatemo.com/tm-526-vanilla
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h1 class="titlePlace text-white"><span class="cursiveFont">Palacio</span>Postal</h1>
-                        <p class="text-white font-weight-bold mb-0">Obra arquitectónica</p>
+                        <h1 class="titlePlace text-white"><span class="cursiveFont">Castillo de</span>Chapultepec</h1>
+                        <p class="text-white font-weight-bold mb-0">Lorem ipsum dolor.</p>
                         <ul class="text-white font-weight-bold">
-                            <li>Construida a comienzos del siglo XX</li>
-                            <li>Uno de los símbolos del Porfiriato</li>
-                            <li>a 12 minutos caminando</li>
+                            <li>Lorem ipsum dolor sit amet, consectetur.</li>
+                            <li>Lorem ipsum dolor sit.</li>
+                            <li>a 00 minutos caminando</li>
                         </ul>
                         <div class="btn-waze">
                             <a href="#" class="btn-waze text-white"><i class="fab fa-waze"></i></a>
