templo mayor edit

--- a/propCdmx.html
+++ b/propCdmx.html
@@ -214,7 +214,7 @@ https://templatemo.com/tm-526-vanilla
                         <ul class="text-white font-weight-bold">
                             <li>Construida a comienzos del siglo XX</li>
                             <li>Uno de los símbolos del Porfiriato</li>
-                            <li>a 12 minutos caminando</li>
+                            <li>A 12 minutos caminando</li>
                         </ul>
                         <div class="btn-waze">
                             <a href="#" class="btn-waze text-white"><i class="fab fa-waze"></i></a>
@@ -224,17 +224,18 @@ https://templatemo.com/tm-526-vanilla
             </div>
         </div>
         <!--******Templo Mayor*******-->
-        <div class="parallax-content element-content__palaciopostal" id="templo_mayor">
+        <div class="parallax-content element-content__templomayor" id="templo_mayor">
             <div class="mmOverlay"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-12">
                         <h1 class="titlePlace text-white"><span class="cursiveFont">Templo</span>Mayor</h1>
-                        <p class="text-white font-weight-bold mb-0">Lorem ipsum dolor.</p>
+                        <p class="text-white font-weight-bold mb-0">Zona arqueológica México-Tenochtitlan.</p>
                         <ul class="text-white font-weight-bold">
-                            <li>Lorem ipsum dolor sit amet, consectetur.</li>
-                            <li>Lorem ipsum dolor sit.</li>
-                            <li>a 00 minutos caminando</li>
+                            <li>Dedicado a Huitzilopochtli, Dios de la Guerra.</li>
+                            <li>Y a Tlaloc, Dios de la lluvia.</li>
+                            <li>El templo comprendía una serie de construcciones, edificios y torres piramidales.</li>
+                            <li>A 13 minutos caminando</li>
                         </ul>
                         <div class="btn-waze">
                             <a href="#" class="btn-waze text-white"><i class="fab fa-waze"></i></a>
@@ -244,7 +245,7 @@ https://templatemo.com/tm-526-vanilla
             </div>
         </div>
         <!--******Calle Madero*******-->
-        <div class="parallax-content element-content__palaciopostal" id="calle_madero">
+        <!--<div class="parallax-content element-content__callemadero" id="calle_madero">
             <div class="mmOverlayBlack"></div>
             <div class="container">
                 <div class="row">
@@ -263,8 +264,9 @@ https://templatemo.com/tm-526-vanilla
                 </div>
             </div>
         </div>
+        -->
         <!--******Castillo de Chapultepec*******-->
-        <div class="parallax-content element-content__palaciopostal" id="chapultepec">
+   <!--     <div class="parallax-content element-content__chapultepec" id="chapultepec">
             <div class="mmOverlay"></div>
             <div class="container">
                 <div class="row">
@@ -283,7 +285,7 @@ https://templatemo.com/tm-526-vanilla
                 </div>
             </div>
         </div>
-
+-->
         <footer id="footer" class="fh5co-bg-color">
             <div class="container">
                 <div class="row">
@@ -346,7 +348,7 @@ https://templatemo.com/tm-526-vanilla
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-<script src="js/vendor/bootstrap.min.js"></script>
+<script src="js_t/bootstrap.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
 <script>
